JAVA/K8S/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /courses(/|$)(.*) # Forward `/courses/**
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 9090

          - path: /associate(/|$)(.*) # Forward `/associate/**`
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 9090

          - path: /admission(/|$)(.*) # Forward `/admission/**`
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 9090
